# voice4evs

./: .gitignore  README.md
backend/: Dockerfile  README.md  complex_demo_scenario.py  config.py  cp_sim.py  csms.py  demo_scenarios.py  demo_script.py  docker-compose.yml  enhanced_cp_sim.py  requirements.txt  rest_api.py  shared_store.py  test_complex_demo.py
backend/configs/: everest_ocpp16.yaml
frontend/: README-twilio.md  bot.py  csms_system_prompt.py  csms_tools.py  pyproject.toml  twilio_server.py
frontend/csms_call_logs/: 20250920T144703Z_twilio_CAc640cce33df77526841365f643930945.ndjson  20250920T145858Z_twilio_CAf90662095ebc37c2d592899a222cc988.ndjson
